update book build

--- a/bib/PhDflt.bib
+++ b/bib/PhDflt.bib
@@ -1,18 +1,13 @@
-@article{Ji2016,
-abstract = {{\textless}h2{\textgreater}Summary{\textless}/h2{\textgreater}{\textless}p{\textgreater}In this study, we describe the 3D chromosome regulatory landscape of human naive and primed embryonic stem cells. To devise this map, we identified transcriptional enhancers and insulators in these cells and placed them within the context of cohesin-associated CTCF-CTCF loops using cohesin ChIA-PET data. The CTCF-CTCF loops we identified form a chromosomal framework of insulated neighborhoods, which in turn form topologically associating domains (TADs) that are largely preserved during the transition between the naive and primed states. Regulatory changes in enhancer-promoter interactions occur within insulated neighborhoods during cell state transition. The CTCF anchor regions we identified are conserved across species, influence gene expression, and are a frequent site of mutations in cancer cells, underscoring their functional importance in cellular regulation. These 3D regulatory maps of human pluripotent cells therefore provide a foundation for future interrogation of the relationships between chromosome structure and gene control in development and disease.{\textless}/p{\textgreater}},
-author = {Ji, Xiong and Dadon, Daniel B. and Powell, Benjamin E. and Fan, Zi Peng and Borges-Rivera, Diego and Shachar, Sigal and Weintraub, Abraham S. and Hnisz, Denes and Pegoraro, Gianluca and Lee, Tong Ihn and Misteli, Tom and Jaenisch, Rudolf and Young, Richard A.},
-doi = {10.1016/j.stem.2015.11.007},
-file = {:home/ibnsalem/Mendeley/Ji et al. - 2016 - 3D Chromosome Regulatory Landscape of Human Pluripotent Cells.pdf:pdf},
-issn = {19345909},
-journal = {Cell Stem Cell},
-month = {feb},
-number = {2},
-pages = {262--275},
-publisher = {Elsevier},
-title = {{3D Chromosome Regulatory Landscape of Human Pluripotent Cells}},
-url = {http://linkinghub.elsevier.com/retrieve/pii/S1934590915005056},
-volume = {18},
-year = {2016}
+@incollection{Lynch2003,
+address = {Dordrecht},
+author = {Lynch, Michael and Conery, John S.},
+booktitle = {Genome Evolution},
+doi = {10.1007/978-94-010-0263-9_4},
+pages = {35--44},
+publisher = {Springer Netherlands},
+title = {{The evolutionary demography of duplicate genes}},
+url = {http://link.springer.com/10.1007/978-94-010-0263-9{\_}4},
+year = {2003}
 }
 @article{Nora2013,
 abstract = {We discuss here a series of testable hypotheses concerning the role of chromosome folding into topologically associating domains (TADs). Several lines of evidence suggest that segmental packaging of chromosomal neighborhoods may underlie features of chromatin that span large domains, such as heterochromatin blocks, association with the nuclear lamina and replication timing. By defining which DNA elements preferentially contact each other, the segmentation of chromosomes into TADs may also underlie many properties of long-range transcriptional regulation. Several observations suggest that TADs can indeed provide a structural basis to regulatory landscapes, by controlling enhancer sharing and allocation. We also discuss how TADs may shape the evolution of chromosomes, by causing maintenance of synteny over large chromosomal segments. Finally we suggest a series of experiments to challenge these ideas and provide concrete examples illustrating how they could be practically applied.},
@@ -282,6 +277,22 @@ title = {{Recently Mobilized Transposons in the Human and Chimpanzee Genomes}},
 url = {http://linkinghub.elsevier.com/retrieve/pii/S0002929707637045},
 volume = {78},
 year = {2006}
+}
+@article{Ji2016,
+abstract = {{\textless}h2{\textgreater}Summary{\textless}/h2{\textgreater}{\textless}p{\textgreater}In this study, we describe the 3D chromosome regulatory landscape of human naive and primed embryonic stem cells. To devise this map, we identified transcriptional enhancers and insulators in these cells and placed them within the context of cohesin-associated CTCF-CTCF loops using cohesin ChIA-PET data. The CTCF-CTCF loops we identified form a chromosomal framework of insulated neighborhoods, which in turn form topologically associating domains (TADs) that are largely preserved during the transition between the naive and primed states. Regulatory changes in enhancer-promoter interactions occur within insulated neighborhoods during cell state transition. The CTCF anchor regions we identified are conserved across species, influence gene expression, and are a frequent site of mutations in cancer cells, underscoring their functional importance in cellular regulation. These 3D regulatory maps of human pluripotent cells therefore provide a foundation for future interrogation of the relationships between chromosome structure and gene control in development and disease.{\textless}/p{\textgreater}},
+author = {Ji, Xiong and Dadon, Daniel B. and Powell, Benjamin E. and Fan, Zi Peng and Borges-Rivera, Diego and Shachar, Sigal and Weintraub, Abraham S. and Hnisz, Denes and Pegoraro, Gianluca and Lee, Tong Ihn and Misteli, Tom and Jaenisch, Rudolf and Young, Richard A.},
+doi = {10.1016/j.stem.2015.11.007},
+file = {:home/ibnsalem/Mendeley/Ji et al. - 2016 - 3D Chromosome Regulatory Landscape of Human Pluripotent Cells.pdf:pdf},
+issn = {19345909},
+journal = {Cell Stem Cell},
+month = {feb},
+number = {2},
+pages = {262--275},
+publisher = {Elsevier},
+title = {{3D Chromosome Regulatory Landscape of Human Pluripotent Cells}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S1934590915005056},
+volume = {18},
+year = {2016}
 }
 @article{DeLaat2007,
 abstract = {Cellular phenotypes can critically rely on mono-allelic gene expression. Recent studies suggest that in mammalian cells inter-chromosomal DNA interactions may mediate the decision which allele to activate and which to silence. Here, these findings are discussed in the context of knowledge on gene competition, chromatin dynamics, and nuclear organization. We argue that data obtained by 4C technology strongly support the idea that chromatin folds according to self-organizing principles. In this concept, the nuclear positioning of a given locus is probabilistic as it also depends on the properties of neighbouring DNA segments and, by extrapolation, the whole chromosome. The linear distribution of repetitive DNA sequences and of active and inactive DNA regions is important for the folding and relative positioning of chromosomes. This stochastic concept of nuclear organization predicts that tissue-specific interactions between two selected loci present on different chromosomes will be rare.},
@@ -3822,6 +3833,22 @@ title = {{Gene family level comparative analysis of gene expression n mammals va
 volume = {6},
 year = {2014}
 }
+@article{Monahan2017,
+abstract = {The monogenic and monoallelic expression of only one out of {\textgreater}1000 mouse olfactory receptor (ORs) genes requires the formation of large heterochromatic chromatin domains that sequester the OR gene clusters. Within these domains, intergenic transcriptional enhancers evade heterochromatic silencing and converge into interchromosomal hubs that assemble over the transcriptionally active OR. The significance of this nuclear organization in OR choice remains elusive. Here, we show that transcription factors Lhx2 and Ebf specify OR enhancers by binding in a functionally cooperative fashion to stereotypically spaced motifs that defy heterochromatin. Specific displacement of Lhx2 and Ebf from OR enhancers resulted in pervasive, long-range, and trans downregulation of OR transcription, whereas pre-assembly of a multi-enhancer hub increased the frequency of OR choice in cis. Our data provide genetic support for the requirement and sufficiency of interchromosomal interactions in singular OR choice and generate general regulatory principles for stochastic, mutually exclusive gene expression programs.},
+author = {Monahan, Kevin and Schieren, Ira and Cheung, Jonah and Mumbey-Wafula, Alice and Monuki, Edwin S and Lomvardas, Stavros},
+doi = {10.7554/eLife.28620.001},
+file = {:home/ibnsalem/Mendeley/elife-28620-v1.pdf:pdf},
+issn = {2050084X},
+journal = {eLife},
+keywords = {chromatin,chromosomes,enhancers,genes,mouse,olfactory receptors,promoters,transcription factors},
+month = {sep},
+pages = {1--32},
+pmid = {28933695},
+title = {{Cooperative interactions enable singular olfactory receptor expression in mouse olfactory neurons}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/28933695},
+volume = {6},
+year = {2017}
+}
 @article{Dekker2015,
 annote = {NULL},
 author = {Dekker, Job and Heard, Edith},
@@ -7301,6 +7328,13 @@ title = {{Consensus Statement: Chromosomal Microarray Is a First-Tier Clinical D
 url = {https://www.sciencedirect.com/science/article/pii/S0002929710002089?via{\%}3Dihub},
 volume = {86},
 year = {2010}
+}
+@phdthesis{Franke2017,
+author = {Franke, Martin},
+file = {:home/ibnsalem/Mendeley/Franke{\_}Martin{\_}Diss-2.pdf:pdf},
+school = {Freien Universit{\"{a}}t Berlin},
+title = {{The Role of Higher-Order Chromatin Organization at the SOX9 Locus in Gene Regulation and Disease Dissertation}},
+year = {2017}
 }
 @article{Tiwari2008,
 abstract = {We describe construction of a novel modification, "6C," of chromatin looping assays that allows specific proteins that may mediate long-range chromatin interactions to be defined. This approach combines the standard looping approaches previously defined with an immunoprecipitation step to investigate involvement of the specific protein. The efficacy of this approach is demonstrated by using a Polycomb group (PcG) protein, Enhancer of Zeste (EZH2), as an example of how our assay might be used. EZH2, as a protein of the PcG complex, PRC2, has an important role in the propagation of epigenetic memory through deposition of the repressive mark, histone H3, lysine 27, tri-methylation (H3K27me3). Using our new 6C assay, we show how EZH2 is a direct mediator of long-range intra- and interchromosomal interactions that can regulate transcriptional down-regulation of multiple genes by facilitating physical proximities between distant chromatin regions, thus targeting sites within to PcG machinery.},
