--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -976,6 +976,13 @@
  year = {2014}
 }
 
+@phdthesis{Franke2017,
+ author = {Franke, Martin},
+ school = {Freien Universit{\"{a}}t Berlin},
+ title = {The Role of Higher-Order Chromatin Organization at the SOX9 Locus in Gene Regulation and Disease Dissertation},
+ year = {2017}
+}
+
 @article{Franke2016,
  author = {Franke, Martin and Ibrahim, Daniel M. and Andrey, Guillaume and Schwarzer, Wibke and Heinrich, Verena and Sch{\"{o}}pflin, Robert and Kraft, Katerina and Kempfer, Rieke and Jerkovi{\'{c}}, Ivana and Chan, Wing-Lee and Spielmann, Malte and Timmermann, Bernd and Wittler, Lars and Kurth, Ingo and Cambiaso, Paola and Zuffardi, Orsetta and Houge, Gunnar and Lambie, Lindsay and Brancati, Francesco and Pombo, Ana and Vingron, Martin and Spitz, Francois and Mundlos, Stefan},
  doi = {10.1038/nature19800},
@@ -1921,6 +1928,17 @@
  year = {2005}
 }
 
+@incollection{Lynch2003,
+ address = {Dordrecht},
+ author = {Lynch, Michael and Conery, John S.},
+ booktitle = {Genome Evolution},
+ doi = {10.1007/978-94-010-0263-9_4},
+ pages = {35--44},
+ publisher = {Springer Netherlands},
+ title = {The evolutionary demography of duplicate genes},
+ year = {2003}
+}
+
 @article{Makova2003,
  author = {Makova, Kateryna D K.D. and Li, Wen-Hsiung W.H.},
  doi = {10.1101/gr.1133803},
@@ -2005,6 +2023,16 @@
  title = {Monoallelic Expression of Olfactory Receptors},
  volume = {31},
  year = {2015}
+}
+
+@article{Monahan2017,
+ author = {Monahan, Kevin and Schieren, Ira and Cheung, Jonah and Mumbey-Wafula, Alice and Monuki, Edwin S and Lomvardas, Stavros},
+ doi = {10.7554/eLife.28620.001},
+ journal = {eLife},
+ pages = {1--32},
+ title = {Cooperative interactions enable singular olfactory receptor expression in mouse olfactory neurons},
+ volume = {6},
+ year = {2017}
 }
 
 @article{Montavon2012,
